@@ -5,6 +5,8 @@
 === 0.5.3 ===
 * Added lltl::bitset collection with basic methods for storing bit flags.
 * Added lltl::phashset collection for quick managing of hash sets of objects.
+* Added lltl::ptr_hash_func and lltl::ptr_cmp_func functions for managing
+  object pointers which are considered to be unique for each object.
 
 === 0.5.2 ===
 * Added hash interface for objects.
